# browser-multiplayer-demo

./: Dockerfile  README.md  env-template  index.html  pyproject.toml
connect4/: __init__.py  __main__.py  connect4.py
connect4/static/: connect4.js  style.css
connect4/templates/: game.html  index.html
examples/canvas/clock/: README.md  index.html  script.js
examples/canvas/paint/: README.md  index.html  script.js  style.css
examples/html/minimal/: index.html
static/: connect4.js
