[tool.poetry]
name = "connect4"
version = "0.1.0"
description = "Demo for a multiplayer browser game using flask/websockets/canvas"
authors = ["Maximilian Nöthe <maximilian.noethe@tu-dortmund.de>"]
license = "mit"

[tool.poetry.dependencies]
python = "^3.6"
flask_socketio = "^4.3.1"
flask = "^1.1.2"
gunicorn = "^20.0.4"
eventlet = "^0.25.2"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
